# advent-of-code-2023

./: Cargo.toml  Justfile  README.md
benchmarks/: benchmarks.rs
src/: bin.rs  day1.rs  day2.rs  day3.rs  day4.rs  main.rs  tracing.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/util/: mod.rs  timing.rs  tracing.rs
